--- a/reserveTime/account/templates/user-edit.html
+++ b/reserveTime/account/templates/user-edit.html
@@ -25,7 +25,7 @@
         <div class="container custom-container shadow">
             <div class="row justify-content-between">
                 <div class="left side">
-                    <a href="#">
+                    <a href="{% url 'core:home' %}">
                         <img src="{% static 'images/logo.png' %}" width="250px" alt="">
                     </a>
                 </div>
@@ -80,21 +80,26 @@
                 </div>
                 
             </div>
-            <div class="row">
-                <div class="col-lg-5 mx-auto pt-5">
-                    <form>
-                        <div class="form-group">
-                            <a class="btn btn-block btn-social btn-google py-3" style="border: 1px solid #ccc;">
-                                <i class="fab fa-google-plus-g mr-2"></i>Continue with Google
-                            </a>
-                            <a class="btn btn-block btn-social btn-facebook py-3 social" style="border: 1px solid #ccc">
-                                <i class="fab fa-facebook-f mr-2"></i> Continue with Facebook
-                            </a>
-                        
-                        </div>
-                    </form>
+            {% if user.is_company %}
+                <div class="row"></div>
+            {% else %}
+                <div class="row">
+                    <div class="col-lg-5 mx-auto pt-5">
+                        <form>
+                            <div class="form-group">
+                                <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-block btn-social btn-google py-3" style="border: 1px solid #ccc;">
+                                    <i class="fab fa-google-plus-g mr-2"></i>Continue with Google
+                                </a>
+                                <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-block btn-social btn-facebook py-3 social" style="border: 1px solid #ccc">
+                                    <i class="fab fa-facebook-f mr-2"></i> Continue with Facebook
+                                </a>
+                            
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </div>
+
+            {% endif %}
         
         </div>
     <!-- </main> -->
