--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -286,7 +286,6 @@ h3{
     text-decoration: none;
     color: #000;
 }
-
 footer{
     position: relative;
     background-color: #2d333f;
@@ -546,7 +545,11 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     align-items: center;
     display: flex;
  }
-
+ .reserve-times{
+    max-height: 43px;
+    width: 100%;
+    height: 100%;
+}
  .table-span{
     position: relative;
     width: 150px;
@@ -571,9 +574,15 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
  }
 
  .modal-dialog{
-     margin-top: 250px;
+    margin-top: 250px;
+    max-width: 565px;
  }
-
+ .times-list-box{
+    margin-top: 100px !important;
+ }
+ .time-items-box{
+    margin-bottom: 0 !important;
+ }
  .pop-up-block{
     position: absolute;
     width: 100%;
