--- a/reserveTime/account/templates/login-user.html
+++ b/reserveTime/account/templates/login-user.html
@@ -66,14 +66,23 @@
         </div>
        
     </header>
+   
 
     <!-- <main class="mb-5"> -->
         <div class="container main-register-container pb-5">
+            
             <div class="row">
+                
                 <div class="col-lg-5 mx-auto pt-5">
                     <form method = "POST">
                         {% csrf_token %}
                         {{form}}
+                        {{form.errors}}
+                        {% for message in messages %}
+                            <div class="mt-2 mb-2 alert alert-danger">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
                         <div class="form-group form-check">
                           <input type="checkbox" class="form-check-input" id="exampleCheck1">
                           <label class="form-check-label" for="exampleCheck1">Remember me</label>
