reservation process added

--- a/reserveTime/core/templates/company-tables.html
+++ b/reserveTime/core/templates/company-tables.html
@@ -23,6 +23,10 @@
             background: linear-gradient(to bottom, rgba(56,59,68,1) 0%,rgba(46,47,52,1) 100%);
             color: #fff;
         }
+        .modal-dialog {
+            margin-top: 250px; 
+            max-width: 565px;
+        }
 
     </style>
 
