--- a/reserveTime/static/css/reserve-page.css
+++ b/reserveTime/static/css/reserve-page.css
@@ -118,27 +118,54 @@
 .choosen-menu-list{
     display: flex;
     justify-content: center;
+    /* color: #000; */
 }
 .choosen-items-container{
     border: 1px solid #ccc;
     padding: 10px;
     display: none;
-    /* background-color: #222325               ; */
+    flex-wrap: wrap;
+    transition: .5s all ease-in-out;
 }
 .choosen-item{
     margin-bottom: 10px;
-    /* display: flex;
-    justify-content: space-between; */
+    width: 264px;
+    padding: 10px;
 }
 .meal-count{
+    /* display: flex; */
+}
+.dec-inc{
     display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+.dec-inc div{
+    margin: 10px;
+}
+.decrease-btn i,.increase-btn i{
+    transition: all .2s ease-in-out;
+}
+.decrease-btn:hover i, .increase-btn:hover i{
+    color: #fff;
 }
 .menu-item-name{
-    margin: 0 30px;
-    /* border: 1px solid #E9E9E9; */
-    padding: 2px 5px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
 }
+.menu_item_name_header{
+    margin: 0 !important;
+}
+.porsion{
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
 .number{
     position: absolute;
     top: -12px;
@@ -146,6 +173,9 @@
 }
 .price-span{
     float: right;
+}
+.original-price{
+    display: none;
 }
 .table-images-container{
     display: flex;
@@ -158,7 +188,7 @@
     cursor: pointer;
 }
 .meal-count i{
-    color: #fff;
+    color: #000;
 }
 .date-time-size-container{
     color: #fff;
@@ -169,3 +199,25 @@
     display: flex;
     padding: 0;
 }
+.total-price{
+    /* max-width: 200px;
+    background-color: #ccc;
+    margin-right: 10px;
+    border-radius: 10px;
+    text-align: center;
+    padding: 6px 20px 0 20px; */
+}
+.submit-reserve-btn{
+    border-radius: 10px;
+}
+
+.complete-reserve-box{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
