--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -573,10 +573,6 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     padding-bottom: 10px;
  }
 
- .modal-dialog{
-    margin-top: 250px;
-    max-width: 565px;
- }
  .times-list-box{
     margin-top: 100px !important;
  }
@@ -598,4 +594,8 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
+ }
+
+ .menu-price{
+    display: flex;
  }
