--- a/reserveTime/account/templates/user-profile.html
+++ b/reserveTime/account/templates/user-profile.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>My Profile</title>
+    
+    <style>
+        .custom-container{
+            background-color: transparent;
+        }
+    </style>
+
 </head>
 <body id="profile-body">
     
