--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -599,3 +599,10 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
  .menu-price{
     display: flex;
  }
+
+ .user-item{
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    padding-top: 10px;
+    margin-bottom: 20px;
+ }
