--- a/reserveTime/core/templates/reservation-detail.html
+++ b/reserveTime/core/templates/reservation-detail.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+{% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>New Reservation</title>
 
     <style>
@@ -31,11 +32,15 @@
         <div class="container custom-container ">
             <div class="row justify-content-between">
                 <div class="left side">
-                    <img src="images/profile.png" width="60px" alt="Profile photo">
-                    <div class="d-flex flex-direction-column ml-2">
-                        <span class="mt-1">Welcome</span>
-                        <h5 class="bold">Ruhin Shukurlu</h5>
-                    </div>
+                    {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" width="60px" alt="Profile photo">
+                    {% else %}
+                        <img src="{% static 'images/profile.png' %}" width="60px" alt="Profile photo">
+                    {% endif %}
+                        <div class="d-flex flex-direction-column ml-2" style="color: wheat;">
+                            <span class="mt-1">Welcome</span>
+                            <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
+                        </div>
                 </div>
                 <div class="right side">
                     <div class="notification">
@@ -60,111 +65,73 @@
                 <h3 class="full bottom-border bold pb-3 mb-5">New Reservation</h3>
                 <div class="comment-item full ">
                     <h4 class="full bottom-border bold pb-3 mb-3 text-center">Reservation Details</h4>
-                    <div class="row">
-                        <div class="col-lg-6 mb-3 reserve-author">
-                            <div class="reserve-author-profile-img">AS</div>
-                            <div class="reserve-author-username">alexandrav</div>
-                            <div class="reserve-author-address">San Francisco</div>  
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="d-flex">
-                                <div class="d-flex ">
-                                    <span class="bold mr-2">Reserve Date and Time : </span>
-                                    <p>July 7, 2020. 12.00 AM</p>
+                    {% for reserve in reservation_detail %}
+                        <div class="row">
+                            <div class="col-lg-6 mb-3 reserve-author">
+                            {% for reservation in reserve.reservation %}{{total_price.total_price}}
+                                <div class="reserve-author-profile-img">{{reservation.user.first_name|first}}{{reservation.user.last_name|first}}</div>
+                                <div class="reserve-author-username">{{reservation.user.username}}</div>
+                                <div class="reserve-author-address">Sabirabad</div>  
+                            {% endfor %}
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="d-flex">
+                                    <div class="d-flex ">
+                                        <span class="bold mr-2">Reserve Date and Time : </span>
+                                        <p>{% for reservation in reserve.reservation %}{{reservation.reserved_date}}, {{reservation.reserved_time|time:'H:i:s'}}{% endfor %}</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <span class="bold mr-2">Party Size : </span>
+                                    <p> {% for size in reserve.table_size %}{{size}}{% endfor %} people </p>
+                                </div>
+                                <div class="d-flex">
+                                    <span class="bold mr-2">Total Price : </span>
+                                    <p>{% for total_price in reserve.reservation %}{{total_price.total_price}}{% endfor %} $</p>
+                                </div>
+                                <div class="d-flex">
+                                    <form action="">
+                                        <input type="submit" class="mt-2 btn btn-success mr-2" value="Accept">
+                                    </form>
+                                    <form action="">
+                                        <input type="submit" class="mt-2 btn btn-danger" value="Denied">
+                                    </form>
                                 </div>
                             </div>
-                            <div class="d-flex">
-                                <span class="bold">Party Size : </span>
-                                <p> 7 people</p>
-                            </div>
-                            <div class="d-flex">
-                                <span class="bold">Total Price : </span>
-                                <p>25 $</p>
-                            </div>
-                            <form action="">
-                                <textarea name="" class="form-control" id="" cols="30" rows="4" placeholder="Write short message to customer about ready time of a meal..."></textarea>
-                                <input type="submit" class="mt-2 btn btn-success" value="Send Message">
-                            </form>
                         </div>
-                    </div>
+                    {% endfor %}
                     <div class="col mt-5">
-                        <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
-                            <div class="menu-section-header mb-4 text-center"><h4 class="bold">Salads</h4></div>
-                            <div class="row menu-items">
-                                <div class="col-sm-6">
-                                    <div class="menu-item">
-                                        <div class="portion-count">
-                                            <span>2 portion</span>
-                                        </div>
-                                        <div class="menu-item-header">
-                                            <div class="menu-title"><span>Baked Clams</span></div>
-                                            <div class="menu-price"><span>$23.95</span></div>
-                                        </div>
-                                        <div class="menu-description">
-                                            <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                        </div>
-                                    </div>
+                        {% for category in menu_categories %}
+                            <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
+                                <div class="menu-section-header mb-4 text-center"><h4 class="bold">{{category.title}}</h4></div>
+                                <div class="row menu-items">
+                                    {% for portion in menus %}
+                                        {% for menu in portion.menu  %}
+                                            {% if menu.menu_type == category %}
+                                                <div class="col-sm-6">
+                                                    <div class="menu-item">
+                                                        <div class="portion-count">
+                                                        
+                                                            <span>{{portion.portion_count}} portion  </span>
+                                                        </div>
+                                                        
+                                                        <div class="menu-item-header">
+                                                            <div class="menu-title"><span>{{menu.title}}</span></div>
+                                                            <div class="menu-price"><span>${{menu.price}}</span></div>
+                                                        </div>
+                                                        <div class="menu-description">
+                                                            <p>{{menu.description}}</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+                                        {% endfor %}
+
+                                    {% endfor %}
+                                    
                                 </div>
-                                <div class="col-sm-6">
-                                    <div class="menu-item">
-                                        <div class="portion-count">
-                                            <span>2 portion</span>
-                                        </div>
-                                        <div class="menu-item-header">
-                                            <div class="menu-title"><span>Baked Clams</span></div>
-                                            <div class="menu-price"><span>$23.95</span></div>
-                                        </div>
-                                        <div class="menu-description">
-                                            <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                
                             </div>
-                        </div>
-                        <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
-                            <div class="menu-section-header mb-4 text-center"><h4 class="bold">Drinks</h4></div>
-                            <div class="row menu-items">
-                                <div class="col-sm-6">
-                                    <div class="menu-item">
-                                        <div class="portion-count">
-                                            <span>2 portion</span>
-                                        </div>
-                                        <div class="menu-item-header">
-                                            <div class="menu-title"><span>Baked Clams</span></div>
-                                            <div class="menu-price"><span>$23.95</span></div>
-                                        </div>
-                                        <div class="menu-description">
-                                            <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="menu-item">
-                                        <div class="portion-count">
-                                            <span>2 portion</span>
-                                        </div>
-                                        <div class="menu-item-header">
-                                            <div class="menu-title"><span>Baked Clams</span></div>
-                                            <div class="menu-price"><span>$23.95</span></div>
-                                        </div>
-                                        <div class="menu-description">
-                                            <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                
-                            </div>
-                        </div>
-                        
-                        <div class="d-flex mb-3">
-                            <span class="bold mr-2">Table Number : </span>
-                            <span>N 25</span>
-                            
-                        </div>
-                        <div class="col">
-                            <img src="images/table-1.jpg" alt="">
-                        </div>  
+                        {% endfor %}
                     </div>
                 </div>
     
@@ -194,10 +161,10 @@
         </div>
       </div>
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>   
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
